WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310314
HashTable of weak pointer should refuse to look up the invalidated weak pointer
https://bugs.webkit.org/show_bug.cgi?id=310314
Summary
HashTable of weak pointer should refuse to look up the invalidated weak pointer
Geoffrey Garen
Reported
2026-03-19 16:13:52 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-19 16:14:00 PDT
<
rdar://problem/172956189
>
Geoffrey Garen
Comment 2
2026-03-19 16:16:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60966
EWS
Comment 3
2026-03-19 19:33:15 PDT
Committed
309591@main
(2ace7bf41640): <
https://commits.webkit.org/309591@main
> Reviewed commits have been landed. Closing PR #60966 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug