HashTable of weak pointer should refuse to look up the invalidated weak pointer https://bugs.webkit.org/show_bug.cgi?id=310314 rdar://172956189

Reviewed by Chris Dumez.

HashTable already prohibits empty and deleted keys, but we need to remember that
weak pointers have an additional, distinct invalidated key.

Test: Tools/TestWebKitAPI/Tests/WTF/HashSet.cpp

* Source/WTF/wtf/HashTable.h:
(WTF::HashTable::isValidKey):
* Tools/TestWebKitAPI/Tests/WTF/HashSet.cpp:
(TestWebKitAPI::TEST(WTF_HashSetDeathTest, InlineWeakPtrAddAfterDeath)):

Canonical link: https://commits.webkit.org/309591@main