Tools/TestWebKitAPI/Tests/WTF/HashSet.cpp
@@ -1146,4 +1146,22 @@ TEST(WTF_HashSet, InlineWeakPtr)
     EXPECT_LT(set.size(), 16u);
 }
 
+#if !PLATFORM(PLAYSTATION)
+TEST(WTF_HashSetDeathTest, InlineWeakPtrAddAfterDeath)
+{
+    HashSet<InlineWeakPtr<InlineWeakPtrObject>> set;
+
+    RefPtr object = InlineWeakPtrObject::create();
+    InlineWeakPtr<InlineWeakPtrObject> weak { object.get() };
+
+    object = nullptr;
+    EXPECT_TRUE(!weak);
+
+    auto shouldCrash = [&] {
+        set.add(WTF::move(weak));
+    };
+    ASSERT_DEATH_IF_SUPPORTED(shouldCrash(), "");
+}
+#endif
+
 } // namespace TestWebKitAPI
